# pypodcaster

./: .editorconfig  .gitignore  Dockerfile  README.md  constants.py  log_config.json  main.py  pyproject.toml
.github/workflows/: unit-test.yaml
api/: podcaster_api.py
api_test/: podcaster_api_test.http
data/: data.json
service/: feed_generator.py  podcaster_logging.py
static/css/: docs.css  theme.css
templates/home/: index.html
templates/shared/: base.html
tests/: test_api.py
views/: home.py
