[tool.poetry]
name = "podcaster"
version = "0.1.0"
description = ""
authors = ["girisagar46 <girisagar46@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
feedparser = "^6.0.8"
httpx = "^0.20.0"
fastapi-utils = "^0.2.1"
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests = "^2.26.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
